Move travis badge template

--- a/src/README.hbs
+++ b/src/README.hbs
@@ -1,4 +1,5 @@
 # <Project Name>
+[![Build Status](https://travis-ci.org/jtheriault/boilerplate-javascript.svg)](https://travis-ci.org/jtheriault/boilerplate-javascript)
 
 ## API Reference
 {{>main}}
